--- a/PracticaGoogleA/index.css
+++ b/PracticaGoogleA/index.css
@@ -77,7 +77,7 @@ nav button {
 	transition: box-shadow 100ms;
 	outline: none;
 }
-.s-box  .s-input:hover {
+.s-box  .s-input:hover { /** para hacer que la barra de búsqueda muestre un borde negro con baja opacidad cuando pasas el cursor por encima**/
 	border: 1px solid #fff;
 	box-shadow: 0 0 2px rgba(0, 0, 0, 0.05), 
 				0 0 2px rgba(0, 0, 0, 0.05),
